mobile-menu z-index fix

--- a/src/styles/layout/mobile-menu.scss
+++ b/src/styles/layout/mobile-menu.scss
@@ -1,6 +1,6 @@
 @use "../abstracts" as abs;
 .mobile-menu{
-  z-index: 2;
+  z-index: 3;
   display: flex;
   justify-content: center;
   align-items: center;
